// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pool: manages dbs in the pool limit 1`] = `
"datasource db {
  provider = \\"postgresql\\"
  url      = \\"postgres://prisma:prisma@127.0.0.1:5433/prisma?schema=prisma-test-utils-0quoet9gzk7d\\"
}

model User {
  id       String  @default(cuid()) @id
  name     String
  email    String
  isActive Boolean
}"
`;

exports[`pool: manages dbs in the pool limit 2`] = `
"datasource db {
  provider = \\"postgresql\\"
  url      = \\"postgres://prisma:prisma@127.0.0.1:5433/prisma?schema=prisma-test-utils-0quoet9gzk7d\\"
}

model User {
  id       String  @default(cuid()) @id
  name     String
  email    String
  isActive Boolean
}"
`;

exports[`pool: run allocates and releases instance 1`] = `
"datasource db {
  provider = \\"postgresql\\"
  url      = \\"postgres://prisma:prisma@127.0.0.1:5433/prisma?schema=prisma-test-utils-165fxnh84tyh\\"
}

model User {
  id       String  @default(cuid()) @id
  name     String
  email    String
  isActive Boolean
}"
`;

exports[`pool: run allocates and releases instance on error 1`] = `
"datasource db {
  provider = \\"postgresql\\"
  url      = \\"postgres://prisma:prisma@127.0.0.1:5433/prisma?schema=prisma-test-utils-klui39uk5n\\"
}

model User {
  id       String  @default(cuid()) @id
  name     String
  email    String
  isActive Boolean
}"
`;
